improved address swagger configuration
